# IT3708

./: .gitignore  README.md
Project_1/src/: genetic_algorithm.py  genotype.py  problem_reader.py  test.py
Project_2/: CMakeLists.txt
Project_2/Solution Images/: readme.txt
Project_2/src/: Genotype.cpp  Genotype.h  NSGA_II.cpp  NSGA_II.h  fileReader.py  genotype.cpp  genotype.h  image_loader.cpp  image_loader.h  main.cpp  nsga2.cpp  nsga2.h  run.py  segmentation.cpp  segmentation.h  testScript.py  utils.cpp  utils.h
Project_3/: CMakeLists.txt
Project_3/data/: test_2x2.txt  test_3x3.txt
Project_3/solutions/: Best-ant-schedule.csv  Best-bee-schedule.csv  Best.csv  Best_bee.csv  test_gantt.csv
Project_3/src/: abc.cpp  abc.h  aco.cpp  aco.h  gantt_functions.py  graph.cpp  graph.h  jssp.cpp  jssp.h  main.cpp  run_gantt.py  scheduleBuilder.cpp  scheduleBuilder.h  schedule_builder.cpp  schedule_builder.h  utils.cpp  utils.h
